# wcrt

./: CMakeLists.txt  Makefile  README.md
doc/: WCRT-1.12.chm
include/: assert.h  ctype.h  debugf.h  math.h  stdio.h  stdlib.h  string.h  time.h  wchar.h
src/: CMakeLists.txt  _fpinit.h  _heap.c  _heap.h  _initterm.c  _initterm.h  _pargvw.asm  _printf.c  _printf.h  _rotr.asm  _scanf.c  _scanf.h  abort.c  abs.asm  asctime.c  assert.c  atan.asm  atan2.asm  atanf.asm  atexit.c  atexit.h  atof.c  atoi.c  atol.c  bsearch.c  calloc.c  clock.c  cosh.asm  crt0.c  crt0dll.c  crt0win.c  debugf.c  delete.cpp  div.c  exit.c  exp2.asm  fclose.c  fflush.c  fgetc.c  fgetpos.c  (+103 more)
src/amd64/: _chkstk.asm  _ftol.asm  _pargv.asm  _rotl.asm  acos.asm  acosf.asm  asin.asm  atan2f.asm  exp.asm  fabs.asm  ldexp.asm  ldexpf.asm  log10.asm  pow.asm  strlen.asm  tanf.asm  trunc.asm
src/i386/: _fpinit.asm  asinf.asm  ceil.asm  cos.asm  cosf.asm  fabsf.asm  floor.asm  log.asm  powf.asm  round.asm  sin.asm  sqrtf.asm  strcpy.asm  tan.asm  tanh.asm
test/: CMakeLists.txt  include.h  stringlength.c
