cmake_minimum_required(VERSION 2.8)
project(wcrt)
set(WCRT_VERSION 1.12)

set( wcrt_headers
    include/assert.h
    include/ctype.h
    include/debugf.h
    include/math.h
    include/stdio.h
    include/stdlib.h
    include/string.h
    include/time.h
    include/wchar.h
)

set(wcrt_src
    src/_chkstk.asm
    src/_fpinit.asm
    src/_fpinit.h
    src/_ftol.asm
    src/_heap.c
    src/_heap.h
    src/_initterm.c
    src/_initterm.h
    src/_pargv.asm
    src/_pargvw.asm
    src/_printf.c
    src/_printf.h
    src/_rotl.asm
    src/_rotr.asm
    src/_scanf.c
    src/_scanf.h
    src/abort.c
    src/abs.asm
    src/acos.asm
    src/acosf.asm
    src/asctime.c
    src/asin.asm
    src/asinf.asm
    src/assert.c
    src/atan.asm
    src/atan2.asm
    src/atan2f.asm
    src/atanf.asm
    src/atexit.c
    src/atexit.h
    src/atof.c
    src/atoi.c
    src/atol.c
    src/bsearch.c
    src/calloc.c
    src/ceil.asm
    src/clock.c
    src/cos.asm
    src/cosf.asm
    src/cosh.asm
    src/crt0.c
    src/crt0dll.c
    src/crt0win.c
    src/debugf.c
    src/delete.cpp
    src/div.c
    src/exit.c
    src/exp.asm
    src/exp2.asm
    src/fabs.asm
    src/fabsf.asm
    src/fclose.c
    src/fflush.c
    src/fgetc.c
    src/fgetpos.c
    src/fgets.c
    src/floor.asm
    src/fopen.c
    src/fprintf.c
    src/fputc.c
    src/fputs.c
    src/fread.c
    src/free.c
    src/freopen.c
    src/fscanf.c
    src/fseek.c
    src/fsetpos.c
    src/ftell.c
    src/fwrite.c
    src/getenv.c
    src/gets.c
    src/isalnum.c
    src/isalpha.c
    src/iscntrl.c
    src/ispunct.c
    src/isspace.c
    src/isxdigit.c
    src/ldexp.asm
    src/ldexpf.asm
    src/ldiv.c
    src/log.asm
    src/log10.asm
    src/log10f.asm
    src/log2.asm
    src/log2f.asm
    src/logf.asm
    src/malloc.c
    src/memchr.c
    src/memcmp.c
    src/memcpy.c
    src/memmove.c
    src/memset.c
    src/new.cpp
    src/pow.asm
    src/powf.asm
    src/printf.c
    src/puts.c
    src/qsort.c
    src/rand.c
    src/rand_r.c
    src/rand_s.c
    src/realloc.c
    src/remove.c
    src/rename.c
    src/rewind.c
    src/round.asm
    src/scanf.c
    src/sin.asm
    src/sinf.asm
    src/sinh.asm
    src/snprintf.c
    src/sprintf.c
    src/sqrt.asm
    src/sqrtf.asm
    src/sscanf.c
    src/stdio.c
    src/strcat.c
    src/strchr.c
    src/strcmp.c
    src/strcoll.c
    src/strcpy.asm
    src/strcpy.c
    src/strcspn.c
    src/stricmp.c
    src/strlen.asm
    src/strlen.c
    src/strlwr.c
    src/strncat.c
    src/strncmp.c
    src/strncpy.c
    src/strpbrk.c
    src/strrchr.c
    src/strspn.c
    src/strstr.c
    src/strtod.c
    src/strtok.c
    src/strtok_r.c
    src/strtol.c
    src/strtoul.c
    src/strupr.c
    src/tan.asm
    src/tanf.asm
    src/tanh.asm
    src/tmpnam.c
    src/tolower.c
    src/toupper.c
    src/trunc.asm
    src/ungetc.c
    src/vfprintf.c
    src/vprintf.c
    src/vsnprintf.c
    src/vsprintf.c
    src/wcrt0.c
    src/wcrt0win.c
    src/wcscat.c
    src/wcschr.c
    src/wcscmp.c
    src/wcscoll.c
    src/wcscpy.c
    src/wcscspn.c
    src/wcslen.c
    src/wcsncat.c
    src/wcsncmp.c
    src/wcsncpy.c
    src/wcspbrk.c
    src/wcsrchr.c
    src/wcsspn.c
    src/wcsstr.c
    src/wcstok.c
    src/wmemchr.c
    src/wmemcmp.c
    src/wmemcpy.c
    src/wmemmove.c
    src/wmemset.c
)

add_custom_command(
    OUTPUT ${wcrt_src} ${wcrt_headers}
    COMMAND ${CMAKE_COMMAND} -E tar xzf ${CMAKE_CURRENT_SOURCE_DIR}/WCRT-${WCRT_VERSION}.zip
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/WCRT-${WCRT_VERSION}.zip
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Unpack and build WCRT"
    VERBATIM
)

add_library(wcrt ${wcrt_src} ${wcrt_headers})
