
set(wcrt_sources
    CMakeLists.txt
    _fpinit.h
    _heap.c
    _heap.h
    _initterm.c
    _initterm.h
    _printf.c
    _printf.h
    _scanf.c
    _scanf.h
    abort.c
    asctime.c
    assert.c
    atexit.c
    atexit.h
    atof.c
    atoi.c
    atol.c
    bsearch.c
    calloc.c
    clock.c
    crt0.c
    crt0dll.c
    crt0win.c
    debugf.c
    delete.cpp
    div.c
    exit.c
    fclose.c
    fflush.c
    fgetc.c
    fgetpos.c
    fgets.c
    fopen.c
    fprintf.c
    fputc.c
    fputs.c
    fread.c
    free.c
    freopen.c
    fscanf.c
    fseek.c
    fsetpos.c
    ftell.c
    fwrite.c
    getenv.c
    gets.c
    isalnum.c
    isalpha.c
    iscntrl.c
    ispunct.c
    isspace.c
    isxdigit.c
    ldiv.c
    malloc.c
    memchr.c
    memcmp.c
    memcpy.c
    memmove.c
    memset.c
    new.cpp
    printf.c
    puts.c
    qsort.c
    rand.c
    rand_r.c
    rand_s.c
    realloc.c
    remove.c
    rename.c
    rewind.c
    scanf.c
    snprintf.c
    sprintf.c
    sscanf.c
    stdio.c
    strcat.c
    strchr.c
    strcmp.c
    strcoll.c
    strcpy.c
    strcspn.c
    stricmp.c
    strlen.c
    strlwr.c
    strncat.c
    strncmp.c
    strncpy.c
    strpbrk.c
    strrchr.c
    strspn.c
    strstr.c
    strtod.c
    strtok.c
    strtok_r.c
    strtol.c
    strtoul.c
    strupr.c
    tmpnam.c
    tolower.c
    toupper.c
    ungetc.c
    vfprintf.c
    vprintf.c
    vsnprintf.c
    vsprintf.c
    wcrt0.c
    wcrt0win.c
    wcscat.c
    wcschr.c
    wcscmp.c
    wcscoll.c
    wcscpy.c
    wcscspn.c
    wcslen.c
    wcsncat.c
    wcsncmp.c
    wcsncpy.c
    wcspbrk.c
    wcsrchr.c
    wcsspn.c
    wcsstr.c
    wcstok.c
    wmemchr.c
    wmemcmp.c
    wmemcpy.c
    wmemmove.c
    wmemset.c
)

if(${CMAKE_SYSTEM_PROCESSOR} EQUAL "AMD64")
    set(archdir "amd64")
else(${CMAKE_SYSTEM_PROCESSOR} EQUAL "AMD64")
    set(archdir "i386")
endif(${CMAKE_SYSTEM_PROCESSOR} EQUAL "AMD64")

list(APPEND wcrt_sources
        ${archdir}/_chkstk.asm
        ${archdir}/_fpinit.asm
        ${archdir}/_ftol.asm
        ${archdir}/_pargv.asm
        ${archdir}/_pargvw.asm
        ${archdir}/_rotl.asm
        ${archdir}/_rotr.asm
        ${archdir}/abs.asm
        ${archdir}/acos.asm
        ${archdir}/acosf.asm
        ${archdir}/asin.asm
        ${archdir}/asinf.asm
        ${archdir}/atan.asm
        ${archdir}/atan2.asm
        ${archdir}/atan2f.asm
        ${archdir}/atanf.asm
        ${archdir}/ceil.asm
        ${archdir}/cos.asm
        ${archdir}/cosf.asm
        ${archdir}/cosh.asm
        ${archdir}/exp.asm
        ${archdir}/exp2.asm
        ${archdir}/fabs.asm
        ${archdir}/fabsf.asm
        ${archdir}/floor.asm
        ${archdir}/ldexp.asm
        ${archdir}/ldexpf.asm
        ${archdir}/log.asm
        ${archdir}/log10.asm
        ${archdir}/log10f.asm
        ${archdir}/log2.asm
        ${archdir}/log2f.asm
        ${archdir}/logf.asm
        ${archdir}/pow.asm
        ${archdir}/powf.asm
        ${archdir}/round.asm
        ${archdir}/sin.asm
        ${archdir}/sinf.asm
        ${archdir}/sinh.asm
        ${archdir}/sqrt.asm
        ${archdir}/sqrtf.asm
        ${archdir}/strcpy.asm
        ${archdir}/strlen.asm
        ${archdir}/tan.asm
        ${archdir}/tanf.asm
        ${archdir}/tanh.asm
        ${archdir}/trunc.asm           
)

add_library(wcrt-static STATIC ${wcrt_sources})
add_library(wcrt-shared SHARED ${wcrt_sources})

